# xcbuild

./: .gitignore  CMakeLists.txt  Notes.txt  TODO
Libraries/: CMakeLists.txt
Libraries/graphics/: CMakeLists.txt
Libraries/graphics/Sources/Format/: PNG.cpp
Libraries/libbom/: CMakeLists.txt
Libraries/libbom/Sources/: bom.c  bom_memory.c  bom_tree.c
Libraries/libbom/Tools/: dump_bom.c  lsbom.cpp
Libraries/libcar/Tools/: dump_car.cpp
Libraries/libutil/: CMakeLists.txt
Libraries/libutil/Headers/libutil/: Absolute.h  Base.h  Relative.h  Strings.h
Libraries/libutil/Sources/: Absolute.cpp  DefaultFilesystem.cpp  MemoryFilesystem.cpp  Relative.cpp
Libraries/libutil/Tests/: test_FSUtil.cpp  test_MemoryFilesystem.cpp
Libraries/pbxbuild/Sources/Tool/: Environment.cpp  LinkerResolver.cpp
Libraries/pbxproj/Headers/pbxproj/PBX/: FileReference.h
Libraries/pbxproj/Tools/: dump_xcodeproj.cpp
Libraries/pbxspec/Sources/PBX/: FileType.cpp
Libraries/pdbdriver/: CMakeLists.txt  NOTES.txt
Libraries/pdbdriver/Headers/pdbuild/: Action.h  Driver.h  Options.h  ProgramExecutor.h  Project.h  Receipt.h  Usage.h
Libraries/pdbdriver/Headers/pdbuild/Actions/: BuildAction.h  CodesignAction.h  FetchAction.h  GroupAction.h  HelpAction.h  InitAction.h  InstallAction.h  LicenseAction.h  ListAction.h  UsageAction.h  VersionAction.h
Libraries/pdbdriver/Sources/: Action.cpp  Driver.cpp  Options.cpp  ProgramExecutor.cpp  Project.cpp  Receipt.cpp  Usage.cpp
Libraries/pdbdriver/Sources/Actions/: BuildAction.cpp  CodesignAction.cpp  FetchAction.cpp  GroupAction.cpp  HelpAction.cpp  InitAction.cpp  InstallAction.cpp  LicenseAction.cpp  ListAction.cpp  UsageAction.cpp  VersionAction.cpp
Libraries/pdbdriver/Tools/: pdbuild.cpp
Libraries/plist/: CMakeLists.txt
Libraries/plist/PrivateHeaders/plist/Format/: BaseXMLParser.h
Libraries/plist/Sources/: UnixTime.cpp
Libraries/plist/Sources/Format/: BaseXMLParser.cpp  Encoding.cpp
Libraries/plist/Tools/: plutil.cpp
Libraries/process/: CMakeLists.txt
Libraries/process/Headers/process/: PDBContext.h
Libraries/process/Sources/: DefaultContext.cpp  DefaultLauncher.cpp  DefaultUser.cpp  PDBContext.cpp
Libraries/sqlitemodern/: CMakeLists.txt
Libraries/sqlitemodern/Headers/: SQLiteModern.h
Libraries/sqlitemodern/PrivateHeaders/utility/: utf16_utf8.h
Libraries/sqlitemodern/Sources/: dummy.cpp
Libraries/xcdriver/: CMakeLists.txt
Libraries/xcdriver/Sources/: BuildAction.cpp  LicenseAction.cpp  ListAction.cpp
Libraries/xcexecution/Sources/: NinjaExecutor.cpp
Libraries/xref/: CMakeLists.txt
Libraries/xref/Headers/: DBDatabase.h  Plugin.h  Xref.h
Libraries/xref/Headers/plugintypes/: BasicPlugin.h  BuildPropertyPlugin.h  ProjectPropertyPlugin.h  PropertyPlugin.h
Libraries/xref/Sources/: DBDatabase.cpp  PluginBase.cpp
Libraries/xref/Sources/plugins/: binary_sites.cpp  configuration.cpp  currentBuild.cpp  darwin.cpp  dependencies.cpp  diff.cpp  dot.cpp  edit.cpp  environment.cpp  exportFiles.cpp  exportIndex.cpp  exportProject.cpp  findFile.cpp  group.cpp  inherits.cpp  loadDeps.cpp  loadFiles.cpp  loadIndex.cpp  macosx.cpp  mergeBuild.cpp  original.cpp  patch_sites.cpp  patchfiles.cpp  plist_sites.cpp  query.cpp  registerFiles.cpp  resolveDeps.cpp  source_sites.cpp  target.cpp  version.cpp
Libraries/xref/Tools/: darwinxref.cpp
